# infrascrap

./: README.md  pyproject.toml
infrascrap/: config.py  exceptions.py  msging.py  utils.py
tests/: test_infrascrap.py
