[tool.poetry]
name = "infrascrap"
version = "0.1.0"
description = "Scraping infrastructure"
authors = ["Sivan Becker <sivanbecker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
keyring = "^21.2.1"
requests = "^2.24.0"
toml = "^0.10.1"
python-telegram-bot = "^12.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
